--- a/.prow/ccm-migrations.yaml
+++ b/.prow/ccm-migrations.yaml
@@ -14,7 +14,7 @@
 
 presubmits:
   - name: pre-kubermatic-ccm-migration-openstack-e2e
-    run_if_changed: "(pkg/provider/cloud/openstack/|pkg/resources/cloudcontroller/|pkg/test/e2e/ccm-migration/|.prow/ccm-migrations.yaml)"
+#    run_if_changed: "(pkg/provider/cloud/openstack/|pkg/resources/cloudcontroller/|pkg/test/e2e/ccm-migration/|.prow/ccm-migrations.yaml)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
@@ -55,8 +55,8 @@ presubmits:
               memory: 4Gi
 
   - name: pre-kubermatic-ccm-migration-vsphere-e2e
-    run_if_changed: "(pkg/|.prow/)"
-    run_if_changed: "(pkg/provider/cloud/vsphere/|pkg/resources/cloudcontroller/|pkg/test/e2e/ccm-migration/|.prow/ccm-migrations.yaml)"
+#    run_if_changed: "(pkg/|.prow/)"
+#    run_if_changed: "(pkg/provider/cloud/vsphere/|pkg/resources/cloudcontroller/|pkg/test/e2e/ccm-migration/|.prow/ccm-migrations.yaml)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
@@ -97,7 +97,7 @@ presubmits:
               memory: 4Gi
 
   - name: pre-kubermatic-ccm-migration-azure-e2e
-    run_if_changed: "(addons/azure-cloud-node-manager/|pkg/provider/cloud/azure/|pkg/resources/cloudcontroller/|pkg/test/e2e/ccm-migration/|.prow/ccm-migrations.yaml)"
+#    run_if_changed: "(addons/azure-cloud-node-manager/|pkg/provider/cloud/azure/|pkg/resources/cloudcontroller/|pkg/test/e2e/ccm-migration/|.prow/ccm-migrations.yaml)"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
