improve naming of user printable columns

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_users.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_users.yaml
@@ -20,8 +20,11 @@ spec:
       name: Email
       type: string
     - jsonPath: .spec.name
-      name: Name
+      name: HumanReadableName
       type: string
+    - jsonPath: .spec.admin
+      name: Admin
+      type: boolean
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
