Support equinixmetal metros
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -425,8 +425,11 @@ spec:
                               items:
                                 type: string
                               type: array
-                          required:
-                          - facilities
+                            metro:
+                              description: Metros are facilities that are grouped
+                                together geographically and share capacity and networking
+                                features, see https://metal.equinix.com/developers/docs/locations/metros/
+                              type: string
                           type: object
                         providerReconciliationInterval:
                           description: ProviderReconciliationInterval is the time
