--- a/charts/oauth/templates/deployment.yaml
+++ b/charts/oauth/templates/deployment.yaml
@@ -55,7 +55,7 @@ spec:
           readOnly: true
 {{- if .Values.dex.extraVolumeMounts }}
 {{ toYaml .Values.dex.extraVolumeMounts | indent 8 }}
-{{- end -}}
+{{- end }}
 {{ if .Values.dex.grpc }}{{ toYaml .Values.dex.grpc.certMount | trim | indent 8 }}
 {{- end }}
         resources:
@@ -72,7 +72,7 @@ spec:
           secretName: themes
 {{- if .Values.dex.extraVolumes }}
 {{ toYaml .Values.dex.extraVolumes | indent 6 }}
-{{- end -}}
+{{- end }}
 {{ if .Values.dex.grpc }}{{ toYaml .Values.dex.grpc.certVolume | trim | indent 6 }}
 {{- end }}
       nodeSelector:
