--- a/pkg/resources/test/fixtures/deployment-openstack-1.24.0-usercluster-controller-externalCloudProvider.yaml
+++ b/pkg/resources/test/fixtures/deployment-openstack-1.24.0-usercluster-controller-externalCloudProvider.yaml
@@ -44,6 +44,35 @@ spec:
         command:
         - /http-prober-bin/http-prober
         env:
+        - name: OS_AUTH_URL
+          value: https://example.com:8000/v3
+        - name: OS_USER_NAME
+          value: openstack-username
+        - name: OS_PASSWORD
+          value: openstack-password
+        - name: OS_DOMAIN_NAME
+          value: openstack-domain
+        - name: OS_PROJECT_NAME
+          value: openstack-project
+        - name: OS_PROJECT_ID
+        - name: OS_APPLICATION_CREDENTIAL_ID
+        - name: OS_APPLICATION_CREDENTIAL_SECRET
+        - name: HTTP_PROXY
+          value: http://my-corp
+        - name: HTTPS_PROXY
+          value: http://my-corp
+        - name: http_proxy
+          value: http://my-corp
+        - name: https_proxy
+          value: http://my-corp
+        - name: NO_PROXY
+          value: apiserver-external.cluster-de-test-01.svc.cluster.local.
+        - name: no_proxy
+          value: apiserver-external.cluster-de-test-01.svc.cluster.local.
+        - name: POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         - name: NAMESPACE
           valueFrom:
             fieldRef:
