--- a/addons/metallb/00_metallb.yaml
+++ b/addons/metallb/00_metallb.yaml
@@ -12,10 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Source: https://raw.githubusercontent.com/metallb/metallb/v0.13.3/config/manifests/metallb-native.yaml
-
----
-apiVersion: v1
+# Source: https://raw.githubusercontent.com/metallb/metallb/v0.13.3/config/manifests/metallb-native.yamlapiVersion: v1
 kind: Namespace
 metadata:
   labels:
@@ -1593,7 +1590,7 @@ spec:
           value: memberlist
         - name: METALLB_DEPLOYMENT
           value: controller
-        image: quay.io/metallb/controller:v0.13.3
+        image: {{ Registry "quay.io" }}/metallb/controller:v0.13.3
         livenessProbe:
           failureThreshold: 3
           httpGet:
@@ -1689,7 +1686,7 @@ spec:
             secretKeyRef:
               key: secretkey
               name: memberlist
-        image: quay.io/metallb/speaker:v0.13.3
+        image: {{ Registry "quay.io" }}/metallb/speaker:v0.13.3
         livenessProbe:
           failureThreshold: 3
           httpGet:
