--- a/.prow/provider-packet.yaml
+++ b/.prow/provider-packet.yaml
@@ -33,8 +33,8 @@ presubmits:
           env:
             - name: KUBERMATIC_EDITION
               value: ee
-            - name: VERSIONS_TO_TEST
-              value: "v1.24.3"
+            - name: RELEASES_TO_TEST
+              value: "1.24"
             - name: PROVIDER
               value: "packet"
             - name: DISTRIBUTIONS
