--- a/addons/metallb/00_metallb.yaml
+++ b/addons/metallb/00_metallb.yaml
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 # Source: https://raw.githubusercontent.com/metallb/metallb/v0.13.3/config/manifests/metallb-native.yaml
+# This file was generated, please run make metallb to update it.
 
 apiVersion: v1
 kind: Namespace
